// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`process processIfHasAccess keeps member nodes if user has access 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "alt": null,
              "title": null,
              "type": "image",
              "url": "",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "P",
                },
              ],
              "type": "emphasis",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {},
      "identifier": "FIGURE",
      "type": "zone",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "If 2-1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "If 2-2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "If 4-1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 6",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "If 7-1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "If 7-2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 8",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {},
      "identifier": "CENTER",
      "type": "zone",
    },
  ],
  "type": "root",
}
`;

exports[`process processIfHasAccess keeps non-member nodes if user has no access 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "alt": null,
              "title": null,
              "type": "image",
              "url": "",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "P",
                },
              ],
              "type": "emphasis",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {},
      "identifier": "FIGURE",
      "type": "zone",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 2-1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 2-2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 3-1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 3-2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 3-3",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 4-1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 4-2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 5-1",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Else 5-2",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 6",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Paragraph 8",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {},
      "identifier": "CENTER",
      "type": "zone",
    },
  ],
  "type": "root",
}
`;
